[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://sprites/alimento.png" type="Texture" id=3]
[ext_resource path="res://sprites/ropa.png" type="Texture" id=4]
[ext_resource path="res://sprites/dispositivo.png" type="Texture" id=5]
[ext_resource path="res://avatares/javier.png" type="Texture" id=6]
[ext_resource path="res://avatares/erick.png" type="Texture" id=7]
[ext_resource path="res://avatares/kelly.png" type="Texture" id=8]
[ext_resource path="res://fotos/cilantro.jpg" type="Texture" id=9]
[ext_resource path="res://fotos/pan.jpg" type="Texture" id=10]
[ext_resource path="res://fotos/postre.jpg" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.180392, 0.823529, 0.156863, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.376471, 0.584314, 0.768627, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel1" type="Panel" parent="."]
margin_left = 3.0
margin_top = 405.0
margin_right = 719.0
margin_bottom = 793.0
rect_pivot_offset = Vector2( -3, -405 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 1.0
margin_top = 793.0
margin_right = 717.0
margin_bottom = 1126.0
rect_pivot_offset = Vector2( -3, -405 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 1.0
margin_top = 155.0
margin_right = 717.0
margin_bottom = 406.0
rect_pivot_offset = Vector2( -3, -405 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnConfig" type="Button" parent="."]
margin_left = 32.0
margin_top = 30.0
margin_right = 107.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Config"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnPerfil" type="Button" parent="."]
margin_left = 202.0
margin_top = 31.0
margin_right = 277.0
margin_bottom = 77.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Perfil"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnHistorial" type="Button" parent="."]
margin_left = 371.0
margin_top = 31.0
margin_right = 446.0
margin_bottom = 77.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Histo"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnFavoritos" type="Button" parent="."]
margin_left = 544.0
margin_top = 29.0
margin_right = 619.0
margin_bottom = 75.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Favori"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatalogo" type="Button" parent="."]
margin_left = 29.0
margin_top = 1159.0
margin_right = 104.0
margin_bottom = 1205.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Catalg"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVenta" type="Button" parent="."]
margin_left = 199.0
margin_top = 1160.0
margin_right = 274.0
margin_bottom = 1206.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Venta"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnFiltro" type="Button" parent="."]
margin_left = 368.0
margin_top = 1160.0
margin_right = 443.0
margin_bottom = 1206.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Filtro"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnChats" type="Button" parent="."]
margin_left = 541.0
margin_top = 1158.0
margin_right = 616.0
margin_bottom = 1204.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Chats"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatL" type="Button" parent="."]
margin_left = 11.0
margin_top = 221.0
margin_right = 29.0
margin_bottom = 252.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "<"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatR" type="Button" parent="."]
margin_left = 629.0
margin_top = 217.0
margin_right = 647.0
margin_bottom = 248.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = ">"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnRandL" type="Button" parent="."]
margin_left = 11.0
margin_top = 545.0
margin_right = 29.0
margin_bottom = 576.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "<"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnRandR" type="Button" parent="."]
margin_left = 629.0
margin_top = 541.0
margin_right = 647.0
margin_bottom = 572.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = ">"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnPerfilL" type="Button" parent="."]
margin_left = 15.0
margin_top = 903.0
margin_right = 33.0
margin_bottom = 934.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "<"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnPerfilR" type="Button" parent="."]
margin_left = 633.0
margin_top = 899.0
margin_right = 651.0
margin_bottom = 930.0
rect_scale = Vector2( 4, 4 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = ">"
__meta__ = {
"_edit_lock_": true
}

[node name="ImgCat" type="TextureRect" parent="."]
margin_left = 262.0
margin_top = 178.0
margin_right = 431.0
margin_bottom = 337.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="TxtCat" type="Label" parent="."]
margin_left = 257.0
margin_top = 338.0
margin_right = 379.0
margin_bottom = 371.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Alimentos"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="ImgCatL" type="TextureRect" parent="."]
margin_left = 109.0
margin_top = 201.0
margin_right = 221.0
margin_bottom = 302.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="TxtCatL" type="Label" parent="."]
margin_left = 74.0
margin_top = 304.0
margin_right = 196.0
margin_bottom = 337.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Dispositivos"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="ImgCatR" type="TextureRect" parent="."]
margin_left = 473.0
margin_top = 198.0
margin_right = 585.0
margin_bottom = 299.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="TxtCatR" type="Label" parent="."]
margin_left = 438.0
margin_top = 301.0
margin_right = 560.0
margin_bottom = 334.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Vestimenta"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatLm" type="Button" parent="."]
margin_left = 68.0
margin_top = 192.0
margin_right = 169.0
margin_bottom = 291.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnCatRm" type="Button" parent="."]
margin_left = 452.0
margin_top = 195.0
margin_right = 553.0
margin_bottom = 294.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Producto" type="Control" parent="."]
margin_left = 350.0
margin_top = 508.0
margin_right = 390.0
margin_bottom = 548.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="Producto"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="Producto"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Pan mordido
pero eso
es comida"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Precio" type="Label" parent="Producto"]
margin_left = -85.0
margin_top = 202.0
margin_right = 37.0
margin_bottom = 236.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
text = "$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnProducto" type="Button" parent="Producto"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 113.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="Producto"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProductoL" type="Control" parent="."]
margin_left = 172.0
margin_top = 508.0
margin_right = 208.0
margin_bottom = 548.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="ProductoL"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="ProductoL"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Cilantrico
para la
sopa"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Precio" type="Label" parent="ProductoL"]
margin_left = -85.0
margin_top = 202.0
margin_right = 37.0
margin_bottom = 236.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
text = "$4.200"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnProductoL" type="Button" parent="ProductoL"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 113.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="ProductoL"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProductoR" type="Control" parent="."]
margin_left = 529.0
margin_top = 507.0
margin_right = 565.0
margin_bottom = 547.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="ProductoR"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="ProductoR"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Postre
de milo
con crema"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Precio" type="Label" parent="ProductoR"]
margin_left = -85.0
margin_top = 202.0
margin_right = 37.0
margin_bottom = 236.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
text = "$5.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnProductoR" type="Button" parent="ProductoR"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 113.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="ProductoR"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="User" type="Control" parent="."]
margin_left = 360.0
margin_top = 894.0
margin_right = 396.0
margin_bottom = 934.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="User"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="User"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Erick"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="User"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "3 cosas
$1.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsr" type="Button" parent="User"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="User"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="UserL" type="Control" parent="."]
margin_left = 180.0
margin_top = 895.0
margin_right = 216.0
margin_bottom = 935.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="UserL"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="UserL"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Javier"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="UserL"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "6 cosas
$4.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsrL" type="Button" parent="UserL"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="UserL"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="UserR" type="Control" parent="."]
margin_left = 534.0
margin_top = 889.0
margin_right = 570.0
margin_bottom = 929.0
__meta__ = {
"_edit_lock_": true
}

[node name="Img" type="TextureRect" parent="UserR"]
margin_left = -80.0
margin_top = -66.0
margin_right = 89.0
margin_bottom = 93.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="UserR"]
margin_left = -85.0
margin_top = 91.0
margin_right = 37.0
margin_bottom = 119.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/line_spacing = -5
text = "Kelly"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Info" type="Label" parent="UserR"]
margin_left = -87.0
margin_top = 129.0
margin_right = 35.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.133333, 0.435294, 0.419608, 1 )
custom_constants/line_spacing = -2
text = "2 cosas
$11.000"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnUsrR" type="Button" parent="UserR"]
margin_left = -84.0
margin_top = -68.0
margin_right = 17.0
margin_bottom = 83.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Online" type="Panel" parent="UserR"]
margin_left = 65.0
margin_top = 72.0
margin_right = 88.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="BtnConfig" to="." method="_on_BtnConfig_pressed"]
[connection signal="pressed" from="BtnPerfil" to="." method="_on_BtnPerfil_pressed"]
[connection signal="pressed" from="BtnHistorial" to="." method="_on_BtnHistorial_pressed"]
[connection signal="pressed" from="BtnFavoritos" to="." method="_on_BtnFavoritos_pressed"]
[connection signal="pressed" from="BtnCatalogo" to="." method="_on_BtnCatalogo_pressed"]
[connection signal="pressed" from="BtnVenta" to="." method="_on_BtnVenta_pressed"]
[connection signal="pressed" from="BtnFiltro" to="." method="_on_BtnFiltro_pressed"]
[connection signal="pressed" from="BtnChats" to="." method="_on_BtnChats_pressed"]
[connection signal="pressed" from="BtnCatL" to="." method="_on_BtnCatL_pressed"]
[connection signal="pressed" from="BtnCatR" to="." method="_on_BtnCatR_pressed"]
[connection signal="pressed" from="BtnRandL" to="." method="_on_BtnRandL_pressed"]
[connection signal="pressed" from="BtnRandR" to="." method="_on_BtnRandR_pressed"]
[connection signal="pressed" from="BtnPerfilL" to="." method="_on_BtnPerfilL_pressed"]
[connection signal="pressed" from="BtnPerfilR" to="." method="_on_BtnPerfilR_pressed"]
[connection signal="pressed" from="BtnCatLm" to="." method="_on_BtnCatLm_pressed"]
[connection signal="pressed" from="BtnCatRm" to="." method="_on_BtnCatRm_pressed"]
[connection signal="pressed" from="Producto/BtnProducto" to="." method="_on_BtnProducto_pressed"]
[connection signal="pressed" from="ProductoL/BtnProductoL" to="." method="_on_BtnProductoL_pressed"]
[connection signal="pressed" from="ProductoR/BtnProductoR" to="." method="_on_BtnProductoR_pressed"]
[connection signal="pressed" from="User/BtnUsr" to="." method="_on_BtnUsr_pressed"]
[connection signal="pressed" from="UserL/BtnUsrL" to="." method="_on_BtnUsrL_pressed"]
[connection signal="pressed" from="UserR/BtnUsrR" to="." method="_on_BtnUsrR_pressed"]
